[package]
name = "poly-commit"
version = "0.1.0"
authors = [
  "Alessandro Chiesa <alexch@berkeley.edu>",
  "Mary Maller <mary.maller.15@ucl.ac.uk>",
  "Yuncong Hu <huyuncongh@gmail.com>",
  "William Lin",
  "Pratyush Mishra <pratyush@berkeley.edu>",
  "Noah Vesely <noah.vesely.18@ucl.ac.uk>",
  "Nicholas Ward <npward@berkeley.edu>",
  "Daniele Di Benedetto <daniele@horizenlabs.io>"
]
description = "A library for constructing polynomial commitment schemes for use in zkSNARKs"
repository = "https://github.com/HorizenLabs/poly-commit"
keywords = ["cryptography", "polynomial commitments", "elliptic curves", "pairing"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
algebra = { git = "https://github.com/HorizenOfficial/ginger-lib", branch = "algebra_ocl", features = ["parallel"] }
algebra-utils = { git = "https://github.com/HorizenOfficial/ginger-lib", branch = "algebra_ocl", features = [ "parallel", "fft" ] }
bench-utils = {  git = "https://github.com/HorizenOfficial/ginger-lib", branch = "algebra_ocl" }
rand = { version = "0.7", default-features = false }
rand_chacha = { version = "0.2.1", default-features = false }
rand_core = { version = "0.5", default-features = false }
digest = "0.8"
rayon = { version = "1" }
derivative = { version = "2" }

# gpu feature
algebra-kernels = {git = "https://github.com/HorizenOfficial/ginger-algebra-ocl", branch = "ginger_ocl", optional = true }

[dev-dependencies]
algebra = {  git = "https://github.com/HorizenOfficial/ginger-lib", branch = "algebra_ocl", features = ["bls12_381", "jubjub", "bn_382", "bls12_377", "tweedle"] }

criterion = "0.3"
rand_xorshift = "0.2"
blake2 = { version = "0.8", default-features = false }

[features]
asm = [ "algebra/llvm_asm" ]
print-trace = [ "bench-utils/print-trace" ]
gpu = [ "algebra-kernels", "algebra-utils/gpu" ]
bench = []

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = false
debug = false

[profile.bench]
opt-level = 3
rpath = false
lto = "thin"
incremental = true
debug-assertions = false
debug = false

[profile.dev]
opt-level = 3
rpath = false
lto = "thin"
incremental = true
debug-assertions = false
debug = false

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = false
debug = false

# Uncomment these lines for local development paths

#[patch.'https://github.com/HorizenOfficial/ginger-lib.git']
#algebra = { path = '../ginger-lib/algebra' }
#algebra-utils = { path = '../ginger-lib/algebra-utils' }
#bench-utils = { path = '../ginger-lib/bench-utils' }
#
#[patch.'https://github.com/HorizenOfficial/ginger-algebra-ocl']
#algebra-kernels = { path = '../ginger-algebra-ocl/algebra-kernels' }
